--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -1,8 +1,8 @@
-    <!-- Navbar -->
+    {% load static %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="assets/img/logo.png" class="logo" alt="" />
+        <a class="navbar-brand" href={% url 'pages:index' %}>
+          <img src={% static 'img/logo.png' %} class="logo" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav">
             <li class="nav-item active mr-3">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href={% url 'pages:index' %}>Home</a>
             </li>
             <li class="nav-item mr-3">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href={% url 'pages:about' %}>About</a>
             </li>
             <li class="nav-item mr-3">
               <a class="nav-link" href="listings.html"
