--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,4 +1,4 @@
-    <!-- Top Bar -->
+{% load static %}
     <section id="top-bar" class="p-3">
       <div class="container">
         <div class="row">
