--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -14,14 +14,24 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav">
-            <li class="nav-item active mr-3">
+            <li {% if '/' == request.path %}
+                class="nav-item active mr-3"
+            {% else %}
+                class="nav-item mr-3"
+            {% endif %}
+            >
               <a class="nav-link" href={% url 'pages:index' %}>Home</a>
             </li>
-            <li class="nav-item mr-3">
+            <li {% if '/about' == request.path %}
+              class="nav-item active mr-3"
+            {% else %}
+              class="nav-item mr-3"
+            {% endif %}
+            >
               <a class="nav-link" href={% url 'pages:about' %}>About</a>
             </li>
             <li class="nav-item mr-3">
-              <a class="nav-link" href="listings.html"
+              <a class="nav-link" href={% url 'listings:listings' %}
                 >Inpatient medical services</a
               >
             </li>
