step 9 : admin data model

--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -32,11 +32,13 @@
       <div class="container">
         <div class="row">
           <!-- Listing 1 -->
+          {% if listings %}
+          {% for lissting in listings %}
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card listing-preview">
               <img
                 class="card-img-top"
-                src="assets/img/clinics/clinic-1.jpg"
+                src={{listing.photo_main.url}}
                 alt=""
               />
               <div class="card-img-overlay">
@@ -81,7 +83,12 @@
               </div>
             </div>
           </div>
-
+          {% endfor %}
+          {% else %}
+          <div class="col-md-12">
+            <p>No Clinic Available</p>
+          </div>
+          {% endif %}
           <!-- Listing 2 -->
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="card listing-preview">
